--- a/client/src/pokemonType.css
+++ b/client/src/pokemonType.css
@@ -5,8 +5,8 @@
           box-sizing: border-box;
 }
 
-body {
-  background-size: contain;
+#app {
+  width: 100%;
   background-repeat: no-repeat;
   text-align: center;
   display: -webkit-box;
@@ -17,10 +17,44 @@ body {
           justify-content: center;
 }
 
+#title {
+  text-align: center;
+  font-size: 3rem;
+  margin: 3rem 0 2rem 0;
+}
+
+#filter-div {
+  text-align: center;
+}
+
+#filter {
+  height: 2rem;
+  font-size: 1rem;
+  padding-left: 0.3rem;
+  border-radius: 0.6rem;
+  margin-right: 0.5rem;
+  outline: none;
+}
+
+#filter-button:hover {
+  cursor: pointer;
+}
+
+#filter-button {
+  display: inline-block;
+  border: none;
+  font-weight: bold;
+  font-size: 1rem;
+  border-radius: 0.6rem;
+  outline: none;
+}
+
+.property {
+  margin: 2rem;
+}
+
 #main-data {
-  width: -webkit-fit-content;
-  width: -moz-fit-content;
-  width: fit-content;
+  margin: 0 15rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -30,9 +64,8 @@ body {
           flex-direction: row-reverse;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
   -ms-flex-line-pack: center;
       align-content: center;
   -webkit-box-align: center;
@@ -50,18 +83,6 @@ body {
   text-decoration: none;
   display: inline-block;
   font-size: 7px;
-}
-
-.flexcontainer {
-  -webkit-box-ordinal-group: 1;
-      -ms-flex-order: 0;
-          order: 0;
-  -webkit-box-flex: 0;
-      -ms-flex: 0 1 auto;
-          flex: 0 1 auto;
-  -ms-flex-item-align: auto;
-      -ms-grid-row-align: auto;
-      align-self: auto;
 }
 
 .main-image {
@@ -86,6 +107,19 @@ body {
     align-items: center;
     flex-direction: row;
 } */
+.stats {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 30vw;
+}
+
+#values {
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+}
+
 img:before,
 img:after {
   content: "";
@@ -114,23 +148,55 @@ img:after {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -webkit-box-direction: reverse;
+      -ms-flex-direction: column-reverse;
+          flex-direction: column-reverse;
   overflow: scroll;
   width: 110px;
   height: 100vh;
-  position: fixed;
-  bottom: 1rem;
+  position: absolute;
+  bottom: 0;
   right: 1rem;
 }
 
+.collection::-webkit-scrollbar {
+  display: none;
+}
+
+#type-list {
+  display: -ms-grid;
+  display: grid;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
+}
+
+#types-value {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
 .type {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  place-items: center;
   border-radius: 0.6rem;
-  padding: 0.4rem;
+  margin-right: 0.3rem;
+  padding: 0.2rem 0.6rem;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
   color: white;
-  /* font-weight: bold; */
-  font-family: 'Fira Sans';
+  text-align: center;
 }
 
 .normal {
