--- a/client/src/pokemonType.css
+++ b/client/src/pokemonType.css
@@ -120,16 +120,6 @@
   width: fit-content;
 }
 
-img:before,
-img:after {
-  content: "";
-  -webkit-box-flex: 1;
-      -ms-flex: 1 1;
-          flex: 1 1;
-  border-bottom: 2px solid #000;
-  margin: auto;
-}
-
 .catched-pokemon {
   border: 0.2rem solid black;
   border-radius: 50%;
@@ -154,7 +144,7 @@ img:after {
   overflow: scroll;
   width: 110px;
   height: 100vh;
-  position: absolute;
+  position: fixed;
   bottom: 0;
   right: 1rem;
 }
@@ -172,7 +162,7 @@ img:after {
 }
 
 #type-list {
-  padding: 2rem 6rem 4rem 6rem;
+  padding: 2rem 7.5rem 4rem 6rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
